--- a/client/moengage/package.json
+++ b/client/moengage/package.json
@@ -9,9 +9,11 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
+    "@mui/x-data-grid": "^6.18.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "firebase": "^10.5.2",
     "mdb-react-ui-kit": "^6.3.0",
