--- a/client/moengage/package.json
+++ b/client/moengage/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH=../../server/public react-scripts build",
+    "build": "set BUILD_PATH=../../server/public&& react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
