--- a/package.json
+++ b/package.json
@@ -3,20 +3,53 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "chalk": "^4.1.2",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concurrently": "^8.2.2",
+    "date-fns": "^2.30.0",
+    "emoji-regex": "^8.0.0",
+    "escalade": "^3.1.1",
+    "express": "^4.18.2",
+    "get-caller-file": "^2.0.5",
+    "has-flag": "^4.0.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "lodash": "^4.17.21",
+    "moengage": "file:client/moengage",
+    "prefix": "^1.0.0",
+    "regenerator-runtime": "^0.14.0",
+    "require-directory": "^2.1.1",
+    "rxjs": "^7.8.1",
+    "shell-quote": "^1.8.1",
+    "spawn-command": "^0.0.2",
+    "string-width": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "supports-color": "^8.1.1",
+    "tree-kill": "^1.2.2",
+    "tslib": "^2.6.2",
+    "wrap-ansi": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1"
+  },
   "scripts": {
-    "install-client": "npm install --prefix client/moengage",
-    "install-server": "npm install --prefix server",
-    "install": "npm run install-server && npm run install-client",
-    "client": "npm start --prefix client/moengage",
-    "server": "npm start --prefix server",
-    "watch": "concurrently  \"npm run server\" \"npm run client\"",
-    "deploy": "npm run build --prefix client/moengage && npm start --prefix server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install-s": "npm install --prefix server/",
+    "install-c": "npm install -- prefix client/moengage/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zlatanxgod/MoEngageApp.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "concurrently": "^8.2.2"
-  }
+  "bugs": {
+    "url": "https://github.com/zlatanxgod/MoEngageApp/issues"
+  },
+  "homepage": "https://github.com/zlatanxgod/MoEngageApp#readme"
 }
